--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "compress": "^0.99.0",
     "compression": "^1.7.4",
     "express": "^4.19.2",
+    "markdown-it": "^14.1.0",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
