--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "build": "cd client && npm run build && cd .. && node app.js",
-    "build-dev": "cd client && npm run build && cd .. && nodemon app.js",
+    "build": "cd client && npm i && npm run build && cd .. && npm i && node app.js",
+    "build-dev": "cd client && npm i && npm run build && cd .. && npm i && nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,6 +22,7 @@
   "dependencies": {
     "compress": "^0.99.0",
     "compression": "^1.7.4",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "markdown-it": "^14.1.0",
     "socket.io": "^4.7.5"
